--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,12 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
             <version>3.4.3</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.5</version>
+        </dependency>
     </dependencies>
 
     <build>
