--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/empresa
 spring.datasource.username=admin
 spring.datasource.password=admin123
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
