--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=horas
 
 
 # base de datos postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/empresa
-spring.datasource.username=admin
-spring.datasource.password=admin123
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=ADMIN
+spring.datasource.password=ADMIN
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
