--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,15 @@
 spring.application.name=horas
 
-
-# base de datos postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/empresa
-spring.datasource.username=admin
+# Configuración base de datos MySQL
+spring.datasource.url=jdbc:mysql://127.17.0.2:3307/empresa
+spring.datasource.username=root
 spring.datasource.password=admin123
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# Opcional: Si quieres ver las consultas SQL en los logs
+spring.jpa.show-sql=true
+# Opcional: Formatea las consultas SQL para mejor legibilidad
+spring.jpa.properties.hibernate.format_sql=true
