--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=horas
 # base de datos postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/empresa
 spring.datasource.username=admin
-spring.datasource.password=admin123
+spring.datasource.password=12345
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
