--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
-!**/src/main/**/resources/
+!**/src/main/**/resources/application.properties
 !**/src/test/**/target/
 
 ### STS ###
@@ -32,3 +32,5 @@ build/
 
 ### VS Code ###
 .vscode/
+
+.env
