--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.28</version> <!-- Usa la versión más reciente disponible -->
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.5</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
