--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=horas
 
-
-# base de datos postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/empresa
-spring.datasource.username=admin
-spring.datasource.password=admin123
-spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# Importa el archivo .env
+spring.config.import=optional:file:.env[.properties]
+
+# Propiedades de conexión usando variables de entorno
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USERNAME}
+spring.datasource.password=${DATASOURCE_PASSWORD}
